# kg-topology-toolbox

./: .flake8  .gitignore  API_reference.html  CITATION.bib  NOTICE.md  README.md  dev  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  user_guide.html
.github/workflows/: ci.yaml
_modules/: index.html
_modules/kg_topology_toolbox/: topology_toolbox.html  utils.html
_sources/: index.rst.txt  user_guide.rst.txt
_sources/notebooks/: ogb_biokg_demo.ipynb.txt
docs/: Makefile  make.bat
docs/source/: API_reference.rst  conf.py  index.rst  user_guide.rst
docs/source/_templates/: class.rst  module.rst  package.rst  toc.rst
docs/source/notebooks/: ogb_biokg_demo.ipynb
kg_topology_toolbox/: __init__.py  topology_toolbox.py
notebooks/: ogb_biokg_demo.html  ogb_biokg_demo.ipynb
src/kg_topology_toolbox/: __init__.py  topology_toolbox.py  utils.py
tests/: test_edge_topology_toolbox.py  test_node_topology_toolbox.py  test_relation_topology_toolbox.py
the_role_of_graph_topology_paper/: README.md  requirements_paper.txt
the_role_of_graph_topology_paper/datasets/FB15k-237/: FB15k-237_preprocessing.ipynb  test_ranks.csv
the_role_of_graph_topology_paper/datasets/Hetionet/: hetionet_preprocessing.ipynb
the_role_of_graph_topology_paper/datasets/OpenBioLink/: openbiolink_preprocessing.ipynb
the_role_of_graph_topology_paper/datasets/PharMeBINet/: pharmebinet_preprocessing.ipynb  test_ranks.csv
the_role_of_graph_topology_paper/datasets/PharmKG/: pharmkg_preprocessing.ipynb
the_role_of_graph_topology_paper/datasets/PrimeKG/: primekg_preprocessing.ipynb
the_role_of_graph_topology_paper/notebooks/: compute_topology_metrics.ipynb  hetionet_pharmebinet_link.ipynb  visualisations.ipynb
the_role_of_graph_topology_paper/train/: params.py  train.py  utils.py
the_role_of_graph_topology_paper/train/scripts/: train_fb15k_237.sh  train_hetionet.sh  train_openbiolink.sh  train_pharmebinet.sh  train_pharmkg.sh  train_primekg.sh
