[options]
packages = kg_topology_toolbox
    
[mypy]
pretty = true
show_error_codes = true
strict = true
check_untyped_defs = true
plugins = numpy.typing.mypy_plugin

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True

[flake8]
# See https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html
max-line-length = 90
extend-ignore = E203,E501,W503

[isort]
profile = black

[tool:pytest]
addopts = --no-cov-on-fail

[coverage:report]
skip_covered = true
show_missing = true
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    assert False
    